# hr-saudi-arabia-erpnext

./: .gitignore  CHANGELOG.md  DEPENDENCIES.md  README.md  RELEASE_NOTES_v1.16.1.md  conftest.py  pyproject.toml  requirements-voice-cpu.txt  requirements.txt  setup.py
.github/workflows/: quality.yml
docs/: demo-data.md  deployment.md  hrms-decoupling.md  installation.md  visual-tour.md
saudi_hr/: hooks.py  install.py  modules.txt  patches.txt  permissions.py
saudi_hr/desktop_icon/: saudi_hr.json
saudi_hr/patches/: reload_annual_leave_workflow.py
saudi_hr/public/: visual-check.html
saudi_hr/public/js/: desk_shortcuts.js  employee.js
saudi_hr/saudi_hr/: api.py  attendance_policy.py  demo_lifecycle.py  location_utils.py  permissions.py  professional_hr_catalog.py  tasks.py  test_annual_leave_finance_permission.py  test_dependency_contract.py  test_employee_lifecycle_smoke.py  test_employee_org_tree.py  test_live_approval_flow.py  test_mobile_attendance_api.py  test_professional_hr_catalog.py  test_runtime_permission_hardening.py  test_tasks.py  test_voice_lightweight.py  test_workflow_route_audit.py  utils.py  voice_verification.py
saudi_hr/saudi_hr/dashboard/saudi_hr_dashboard/: saudi_hr_dashboard.json
saudi_hr/saudi_hr/dashboard_chart/active_contracts_by_type/: active_contracts_by_type.json
saudi_hr/saudi_hr/dashboard_chart/compliance_actions_by_area/: compliance_actions_by_area.json
saudi_hr/saudi_hr/dashboard_chart/gosi_monthly_contributions/: gosi_monthly_contributions.json
saudi_hr/saudi_hr/dashboard_chart/grievances_by_type/: grievances_by_type.json
saudi_hr/saudi_hr/dashboard_chart/investigations_by_case_type/: investigations_by_case_type.json
saudi_hr/saudi_hr/dashboard_chart/legal_risk_distribution/: legal_risk_distribution.json
saudi_hr/saudi_hr/dashboard_chart/nationality_distribution/: nationality_distribution.json
saudi_hr/translations/: ar.csv
saudi_hr/workspace_sidebar/: saudi_hr.json
saudi_hr/www/: manifest.webmanifest  mobile-attendance-sw.js  mobile-attendance.html  mobile-attendance.py
scripts/: validate_quality.py
(+264 files in other folders)
